# polars-tsfresh

./: .gitignore  AGENTS.md  Dockerfile  README.md  build.sh  pyproject.toml  run.sh
.serena/: project.yml
.serena/memories/: project_overview.md  suggested_commands.md
awslambda/: build_package.nu  build_package.ps1  build_package.sh
plan/: tsfresh.yaml
src/app/: server.py
src/polars_tsfresh/: __init__.py  features.py
src/polars_tsfresh/feature_extraction/: __init__.py  settings.py
tests/data/: sp500_raw.csv  sp500_tsfresh_features.csv  test_minimal.py
