[project]
name = "python-uv-template"
version = "0.1.0"
description = "A Project Template of Python with uv"
authors = [{ name = "杜世橋 Du Shiqiao", email = "lucidfrontier.45@gmail.com" }]
requires-python = ">=3.13"
dependencies = ["fastapi>=0.116.1", "uvicorn[standard]>=0.35.0"]

[project.scripts]
app = "app.cli:main"

[dependency-groups]
dev = [
    "poethepoet>=0.39.0",
    "pyrefly>=0.46.1",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.10",
]

[build-system]
requires = ["uv_build>=0.9.17,<0.10.0"]
build-backend = "uv_build"

[tool.uv]
managed = true

[tool.uv.build-backend]
module-name = ["app"]

[tool.poe.tasks]
ruff_check = "ruff check ."
ruff_fix = "ruff check --fix ."
ruff_format = "ruff format ."
pyrefly_check = "pyrefly check ."
check = ["ruff_check", "pyrefly_check"]
format = ["ruff_fix", "ruff_format"]
test = "pytest tests -n auto --cov=app --cov-report=term --cov-report=xml"

[tool.pytest.ini_options]
filterwarnings = ["ignore::FutureWarning"]

[tool.ruff]
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
    "I",
    "B",
    "RUF",
    "UP",
    "N",
    "SIM",
    "A",
    "S",
    "DTZ",
    "PIE",
    "PLE",
]
# add directory names to exclude from analysis
exclude = ["tests/**/*", "deps/**/*"]

[tool.ruff.lint.per-file-ignores]
"*/__init__.py" = ['F401']

[tool.pyrefly]
python-version = "3.13"
