[project]
name = "polars-tsfresh"
version = "0.1.1"
description = "Fast implementation of tsfresh time series feature extraction using Polars"
authors = [{ name = "杜世橋 Du Shiqiao", email = "lucidfrontier.45@gmail.com" }]
requires-python = ">=3.12"
dependencies = ["polars>=1.36.1"]
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = [
    "time-series",
    "feature-extraction",
    "polars",
    "tsfresh",
    "data-science",
    "machine-learning",
    "statistics",
]

[project.urls]
homepage = "https://github.com/lucidfrontier45/polars-tsfresh"
repository = "https://github.com/lucidfrontier45/polars-tsfresh"
issues = "https://github.com/lucidfrontier45/polars-tsfresh/issues"

[project.optional-dependencies]
dev = [
    "ipykernel>=7.1.0",
    "poethepoet>=0.39.0",
    "pyrefly>=0.46.3",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.10",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "poethepoet>=0.39.0",
    "pyrefly>=0.46.3",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.10",
]

[build-system]
requires = ["uv_build>=0.9.17,<0.10.0"]
build-backend = "uv_build"

[tool.uv]
managed = true

[tool.poe.tasks]
ruff_check = "ruff check ."
ruff_fix = "ruff check --fix ."
ruff_format = "ruff format ."
pyrefly_check = "pyrefly check ."
check = ["ruff_check", "pyrefly_check"]
format = ["ruff_fix", "ruff_format"]
test = "pytest tests --cov=polars_tsfresh --cov-report=term --cov-report=xml"

[tool.pytest.ini_options]
filterwarnings = ["ignore::FutureWarning"]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
    "I",
    "B",
    "RUF",
    "UP",
    "N",
    "SIM",
    "A",
    "S",
    "DTZ",
    "PIE",
    "PLE",
]
exclude = ["tests/**/*", "deps/**/*"]

[tool.ruff.lint.per-file-ignores]
"*/__init__.py" = ['F401']

[tool.pyrefly]
python-version = "3.12"
